--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -49,7 +49,8 @@
         android:textSize="20sp"
         android:padding="15sp"
         android:textColor="@color/white"
-        android:text="NEW ALARM"
-        android:gravity="center"/>
+        android:text="@string/new_alarm"
+        android:gravity="center"
+        android:id="@+id/add_alarm"/>
 
 </LinearLayout>
