binding with adapter, deleting or marking as done checklist items

--- a/app/src/main/res/layout/row_checklist.xml
+++ b/app/src/main/res/layout/row_checklist.xml
@@ -54,7 +54,7 @@
                 android:paddingTop="10sp"
                 android:paddingBottom="10sp"
                 tools:ignore="RtlHardcoded"
-                android:id="@+id/remove_item"/>
+                android:id="@+id/delete_check"/>
 
             <ImageView
                 android:layout_width="1sp"
