--- a/app/src/main/res/layout/fragment_crop.xml
+++ b/app/src/main/res/layout/fragment_crop.xml
@@ -1,14 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinator"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.tool_activity.image_tools.crop.CropFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        tools:context=".view.tool_activity.image_tools.crop.CropFragment">
 
-</FrameLayout>
+        <com.isseiaoki.simplecropview.CropImageView
+            xmlns:custom="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/crop_view"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="1"
+            custom:scv_crop_mode="fit_image"
+            custom:scv_background_color="@color/colorBlack"
+            custom:scv_handle_color="@color/primary_new_light"
+            custom:scv_guide_color="@color/colorBlackShadeTxTwo"
+            custom:scv_overlay_color="@color/colorBlackShadeTxTwo"
+            custom:scv_frame_color="@color/primary_new_light"
+            custom:scv_handle_size="14dp"
+            custom:scv_touch_padding="8dp"
+            custom:scv_handle_show_mode="show_always"
+            custom:scv_guide_show_mode="show_always"
+            custom:scv_min_frame_size="50dp"
+            custom:scv_frame_stroke_weight="1dp"
+            custom:scv_guide_stroke_weight="1dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="1:1"
+                android:gravity="center"
+                android:textColor="@color/primary_new"
+                android:textSize="18sp"
+                android:id="@+id/one_one"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="4:3"
+                android:gravity="center"
+                android:textColor="@color/primary_new"
+                android:textSize="18sp"
+                android:id="@+id/four_three"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="X:X"
+                android:gravity="center"
+                android:textColor="@color/primary_new"
+                android:textSize="18sp"
+                android:id="@+id/original_ratio"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="FIT"
+                android:gravity="center"
+                android:textColor="@color/primary_new"
+                android:textSize="18sp"
+                android:id="@+id/fit_image"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="16:9"
+                android:gravity="center"
+                android:textColor="@color/primary_new"
+                android:textSize="18sp"
+                android:id="@+id/sixteen_nine"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45sp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_rotate_left_black_48"
+                android:tint="@color/primary_new"
+                tools:ignore="ContentDescription"
+                android:id="@+id/rotate_left"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_rotate_right_black_48"
+                android:tint="@color/primary_new"
+                tools:ignore="ContentDescription"
+                android:id="@+id/rotate_right"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_save_black_48"
+                android:tint="@color/primary_new"
+                tools:ignore="ContentDescription"
+                android:id="@+id/save_to_gallery"/>
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:background="@color/colorTextFour"
+            tools:ignore="ContentDescription,SmallSp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_photo_library_black_48"
+                android:tint="@color/primary_new"
+                tools:ignore="ContentDescription"
+                android:id="@+id/select_image_from_gallery"/>
+
+            <ImageView
+                android:layout_width="1sp"
+                android:layout_height="match_parent"
+                android:background="@color/colorTextFive"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:layout_width="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:layout_height="match_parent"
+                android:src="@drawable/baseline_photo_camera_black_48"
+                android:tint="@color/primary_new"
+                tools:ignore="ContentDescription"
+                android:id="@+id/capture_image"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
