--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,9 +22,11 @@
     <color name="colorFlashlightShade">#FFECB3</color>
     <color name="colorWhiteShade">#FFFFFF</color>
     <color name="colorBlackShadeTx">#56000000</color>
+    <color name="colorBlack">#000000</color>
     <color name="colorBlackShade">#474747</color>
     <color name="colorBlackShade2">#7F7F7F</color>
     <color name="colorBlackShade3">#CCCBCA</color>
+    <color name="colorBlackShadeTxTwo">#81000000</color>
     <color name="colorTest">#E65100</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
