--- a/app/src/main/res/layout/fragment_crop.xml
+++ b/app/src/main/res/layout/fragment_crop.xml
@@ -31,8 +31,7 @@
             custom:scv_handle_show_mode="show_always"
             custom:scv_guide_show_mode="show_always"
             custom:scv_min_frame_size="50dp"
-            custom:scv_frame_stroke_weight="1dp"
-            custom:scv_guide_stroke_weight="1dp"/>
+            custom:scv_guide_stroke_weight="2sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,7 +76,7 @@
                 android:layout_width="0sp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="X:X"
+                android:text="FREE"
                 android:gravity="center"
                 android:textColor="@color/primary_new"
                 android:textSize="18sp"
