saving draw note file to storage done

--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -36,12 +36,20 @@
 
         </ir.beigirad.zigzagview.ZigzagView>
 
-        <android.support.v7.widget.RecyclerView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recycler">
+            android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+            <include layout="@layout/layout_no_results"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recycler">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </FrameLayout>
 
     </LinearLayout>
 
