--- a/app/src/main/res/layout/row_featured_item.xml
+++ b/app/src/main/res/layout/row_featured_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80sp"
-    android:layout_height="80sp"
+    android:layout_width="60sp"
+    android:layout_height="60sp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="40sp"
+    app:cardCornerRadius="30sp"
     app:cardElevation="5sp"
     android:layout_marginTop="10sp"
     android:layout_marginBottom="10sp"
@@ -19,11 +19,11 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/featured_image_view"
+            android:id="@+id/sensor_image_view"
             tools:ignore="ContentDescription"
             tools:src="@drawable/baseline_bluetooth_black_48"
             android:tint="@color/white"
-            android:padding="20sp"/>
+            android:padding="15sp"/>
 
     </FrameLayout>
 
